--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,16 @@
             <version>1.3.173</version>
         </dependency>
         <!--MediaTypes-->
-        <!--MP3 support-->
+        <!--Audio support-->
         <dependency>
             <groupId>com.mpatric</groupId>
             <artifactId>mp3agic</artifactId>
             <version>0.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org</groupId>
+            <artifactId>jaudiotagger</artifactId>
+            <version>2.0.3</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -64,7 +69,22 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
+        <jdk.version>1.7</jdk.version>
         <jetty.version>9.0.4.v20130625</jetty.version>
         <servlet.version>3.0.0.v201112011016</servlet.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
